--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "rollup-starter-lib",
   "version": "1.0.0",
-  "main": "dist/how-long-till-lunch.cjs.js",
-  "module": "dist/how-long-till-lunch.esm.js",
-  "browser": "dist/how-long-till-lunch.umd.js",
-  "dependencies": {
-    "ms": "^2.0.0"
-  },
+  "main": "dist/cjs.js",
+  "module": "dist/esm.js",
+  "browser": "dist/umd.js",
+  "browser__name": "rollupStarterLib",
+  "dependencies": {},
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
